--- a/Debug/makefile
+++ b/Debug/makefile
@@ -62,7 +62,7 @@ main-build: CC.elf secondary-outputs
 
 # Tool invocations
 CC.elf CC.map: $(OBJS) $(USER_OBJS) C:\Users\mrchl\STM32CubeIDE\workspace_1.12.1\CC\CC\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "CC.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\mrchl\STM32CubeIDE\workspace_1.12.1\CC\CC\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="CC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "CC.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\mrchl\STM32CubeIDE\workspace_1.12.1\CC\CC\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="CC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
